## Process this file with automake to produce Makefile.in

SUBDIRS = man

EXTRA_DIST =

EXTRA_DIST += \
_layouts/default.html \
_layouts/favicon.ico \
index.md \
manual/index.md \
manual/arch_dependencies.md \
manual/autosetup.md \
manual/boolean_dependencies.md \
manual/buildprocess.md \
manual/file_triggers.md \
manual/lua.md \
manual/more_dependencies.md \
manual/scriptlet_expansion.md \
manual/buildroot.md \
manual/conditionalbuilds.md \
manual/dependencies.md \
manual/dependency_generators.md \
manual/format.md \
manual/hregions.md \
manual/large_files.md \
manual/macros.md \
manual/multiplebuilds.md \
manual/plugins.md \
manual/queryformat.md \
manual/relocatable.md \
manual/signatures.md \
manual/signatures_digests.md \
manual/spec.md \
manual/tags.md \
manual/triggers.md \
manual/tsort.md
